fixed the swearing

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </div>
             <div class="subbar">
                 <p>lmao</p>
-                <p>fuck_my_life</p>
+                <p>add_something_here</p>
                 <p>i'm_having_fun</p>
                 <div class="right">Language</div>
                 <div class="right">Login</div>
