--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     <p>Language</p>
                     <p>Login</p>
                 </div> -->
-                <img src="TL.png" alt="Logo">
+                <img src="images/TL.png" alt="Logo">
             </div>
             <div class="subbar">
                 <p>lmao</p>
@@ -41,7 +41,7 @@
                     <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam eu iaculis turpis, ut faucibus metus. Maecenas fermentum placerat est, non dignissim elit dictum a. Sed ut consequat massa. Sed dui lorem, ornare in lectus nec, vulputate auctor arcu. Aenean eu lobortis lacus, ut viverra est. Integer sollicitudin a dolor eu elementum. Proin gravida at velit imperdiet pretium. Ut tellus ipsum, convallis sed varius in, laoreet ut arcu. Morbi accumsan consequat lacinia. Sed faucibus, turpis eget accumsan blandit, ante ante feugiat ipsum, id laoreet urna justo ut augue. Duis viverra mattis rhoncus. Vivamus cursus eleifend varius.</p>
 
                 </div>
-                <img src="pngkit_anime-school-girl-png_3195405.png" alt="Anime Girl">
+                <img src="images/pngkit_anime-school-girl-png_3195405.png" alt="Anime Girl">
             </div>
             <section>
                 <p>Vivamus et dolor semper risus imperdiet tristique ac sed ipsum. Sed sagittis, nibh nec volutpat posuere, nibh turpis egestas justo, vitae venenatis arcu lectus id massa. Maecenas fringilla, magna sit amet bibendum finibus, nunc ex accumsan nunc, at venenatis justo massa id enim. Mauris vel leo at odio lacinia cursus. Fusce tristique, odio vitae fringilla elementum, purus eros congue velit, a dapibus tellus leo ac odio. Sed vehicula eu augue eu interdum. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Mauris cursus viverra facilisis. Vivamus interdum, orci eu convallis malesuada, ipsum nisi convallis mauris, quis viverra lacus eros sed ante. Sed lobortis lectus id erat cursus, eget vulputate velit egestas. Nulla elementum pharetra justo, ut commodo lorem vehicula id. Vestibulum dapibus, lorem vel aliquet pharetra, massa sem condimentum enim, eget finibus odio nulla eget lectus. </p>
@@ -65,7 +65,7 @@
                     </div>
                     <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam eu iaculis turpis, ut faucibus metus. Maecenas fermentum placerat est, non dignissim elit dictum a. Sed ut consequat massa. Sed dui lorem, ornare in lectus nec, vulputate auctor arcu. Aenean eu lobortis lacus, ut viverra est. Integer sollicitudin a dolor eu elementum. Proin gravida at velit imperdiet pretium. Ut tellus ipsum, convallis sed varius in, laoreet ut arcu. Morbi accumsan consequat lacinia. Sed faucibus, turpis eget accumsan blandit, ante ante feugiat ipsum, id laoreet urna justo ut augue. Duis viverra mattis rhoncus. Vivamus cursus eleifend varius.</p>
                 </div>
-                <img src="Anime-Girl-PNG-1.jpg" alt="Anime Girl 2">
+                <img src="images/Anime-Girl-PNG-1.jpg" alt="Anime Girl 2">
             </div>
             <section>
                 <p>Vivamus et dolor semper risus imperdiet tristique ac sed ipsum. Sed sagittis, nibh nec volutpat posuere, nibh turpis egestas justo, vitae venenatis arcu lectus id massa. Maecenas fringilla, magna sit amet bibendum finibus, nunc ex accumsan nunc, at venenatis justo massa id enim. Mauris vel leo at odio lacinia cursus. Fusce tristique, odio vitae fringilla elementum, purus eros congue velit, a dapibus tellus leo ac odio. Sed vehicula eu augue eu interdum. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Mauris cursus viverra facilisis. Vivamus interdum, orci eu convallis malesuada, ipsum nisi convallis mauris, quis viverra lacus eros sed ante. Sed lobortis lectus id erat cursus, eget vulputate velit egestas. Nulla elementum pharetra justo, ut commodo lorem vehicula id. Vestibulum dapibus, lorem vel aliquet pharetra, massa sem condimentum enim, eget finibus odio nulla eget lectus. </p>
