contact navbar work

--- a/contact.html
+++ b/contact.html
@@ -6,8 +6,21 @@
     </head>
     <body>
         <nav>
-            <dir class="topbar">asdfasdf</dir>
-            <dir class="topbar tertiary">adfasd</dir>
+            <dir class="topbar">
+                <p>Option 1</p>
+                <p>Option 2</p>
+                <p>Option 3</p>
+                <p>Option 4</p>
+            </dir>
+            <dir class="topbar tertiary">
+                <img src="images/TL.png">
+                <div id="mainoptions">
+                    <p>Main Option 1</p>
+                    <p class="selected">Main Option 2</p>
+                    <p>Main Option 3</p>
+                    <p>Main Option 4</p>
+                </div>
+            </dir>
         </nav>
         <img class="mainimage" src="images/DataCenterGuyCloseup.jpg" alt="A Handsome Man Inspecting Cable">
         <main>
