--- a/contact.html
+++ b/contact.html
@@ -77,5 +77,8 @@
             </div>
             <p class="ebeggingctn">Consider it, it might be fun!</p>
         </main>
+        <div class="informationblock">
+            
+        </div>
     </body>
 </html>
